--- a/app/src/main/res/layout/fragment_goods.xml
+++ b/app/src/main/res/layout/fragment_goods.xml
@@ -116,24 +116,39 @@
                     android:textSize="14sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
-
                 <TextView
-                    android:id="@+id/tv_price"
-                    android:layout_marginTop="10dp"
-                    tools:text="￥ 1890 "
-                    android:textColor="@color/red"
-                    android:textSize="16sp"
+                    android:id="@+id/tv_manjiansong"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="8dp"
+                    android:textSize="14sp"
+                    tools:text="满减送"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/tv_price"
+                        android:layout_marginTop="10dp"
+                        tools:text="￥ 1890 "
+                        android:textColor="@color/red"
+                        android:textSize="16sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
 
-                <TextView
-                    android:id="@+id/tv_old_price"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    tools:text="@string/goods_old_money"
-                    android:textColor="@color/text_9c9c9c"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    <TextView
+                        android:id="@+id/tv_old_price"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginLeft="8dp"
+                        tools:text="@string/goods_old_money"
+                        android:textColor="@color/text_9c9c9c"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+
+
             </LinearLayout>
 
             <View
